--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -13,6 +13,7 @@
         <div class="navlink"><a href="/account">Account</a></div>
     </nav>
     <h1>Cards Against Humanity Online</h1>
+    <h2>Welcome, {{nickname}}</h2>
 
     <section id="content">
         {{!-- <div><a href="/join">Join Room</a></div>
