--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -11,6 +11,7 @@
     <nav>
         <div class="navlink"><a href="/store">Store</a></div>
         <div class="navlink"><a href="/account">Account</a></div>
+        <div class="navlink"><a href = '/logout'>Logout</a></div>
     </nav>
     <h1>Cards Against Humanity Online</h1>
     <h2>Welcome, {{nickname}}</h2>
