--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NotCAH: </title>
+    <link rel="stylesheet" type="text/css" href="/assets/styles/game.css"/>
 </head>
 
 <body>
     <div id="master-container">
         <div id="user_container">
             <!--List users in the room here-->
+            <h2>There would be users here</h2>
         </div>
         <div id="main">
             <!--a simple waiting screen OR 
