--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>NotCAH</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
 </head>
 
 <body>
