Added API functionality

--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>NotCAH</title>
+    <title>NotCAH Menu</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png" />
     <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
 </head>
@@ -14,7 +14,7 @@
         <div class="navlink"><a href = '/logout'>Logout</a></div>
     </nav>
     <h1>Cards Against Humanity Online</h1>
-    <h2>Welcome, {{nickname}}</h2>
+    <h2>Welcome, {{username}}</h2>
 
     <section id="content">
         {{!-- <div><a href="/join">Join Room</a></div>
