--- a/hosted/styles/game.css
+++ b/hosted/styles/game.css
@@ -1,11 +1,11 @@
-
 html {
     overflow: hidden;
+    margin: 0;
 }
 
 #master-container {
     width: 90%;
-    height: 90%;
+    height: 100%;
     margin: auto;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -18,15 +18,106 @@ html {
 #user_container {
     background-color: blue;
     grid-area: 1 / 1 / 6 / 2;
+}
+
+
+/*User List styling*/
+#userList {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    height: 100%;
+    padding: 0;
+}
+
+#userList li {
+    width: 100%;
+    height: 25%;
 
 }
 
+#userList li h3 {
+    text-align: center;
+}
+
+#p1 {
+    background-color: #1F2F16;
+}
+
+#p2 {
+    background-color: #395B50;
+}
+
+#p3 {
+    background-color: #5A7684;
+}
+
+#p4 {
+    background-color: #92AFD7;
+}
+
 #main {
-    background-color: red; 
-    grid-area: 1 / 2 / 4 / 5;
+    grid-area: 1 / 2 / 4 / 6;
 }
 
 #controls {
     background-color: purple;
-    grid-area: 4 / 2 / 6 / 5;
+    grid-area: 4 / 2 / 6 / 6;
+}
+
+
+/*Game UI styling*/
+#gameplayScreen {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+#gameplayScreen .roundTracker {
+    background-color: limegreen;
+    display: grid;
+    grid-area: 1 / 1 / 2 / 7;
+    text-align: center;
+}
+
+#gameplayScreen .judgeTracker {
+    background-color: yellow;
+    grid-area: 2 / 1 / 6 / 4;
+}
+
+#gameplayScreen .promptContainer {
+    background-color: grey;
+    grid-area: 2 / 4 / 6 / 7;
+}
+
+/*Player hand styling*/
+#hand {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+#hand #cards {
+    grid-area: 1 / 1 / 2 / 4;
+    width: 80%;
+    height: 90%;
+    display: flex; 
+    flex-direction: column;
+}
+
+#cards div {
+    width: 80%;
+
+}
+
+#hand #submit-container {
+    grid-area: 1 / 4 / 2 / 5;
 }
