--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,7 +17,7 @@
 
   </section>
 
-  <div id="domoMessage" class='hidden'>
+  <div id="errorDiv" class='hidden'>
 
     <h3><span id="errorMessage"></span></h3>
 
