adjustments to players leaving

--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NotCAH Game</title>
     <link rel="stylesheet" type="text/css" href="/assets/styles/game.css"/>
+    <link rel="stylesheet" href="/assets/styles/general.css">
 </head>
 
 <body>
