--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <title>NotCAH Login</title>
   <link rel="shortcut icon" href="/assets/img/favicon.png" />
-  <link rel="stylesheet" type="text/css" href="/assets/style.css" />
+    <link rel="stylesheet" href="/assets/styles/general.css">
 </head>
 
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo" /></a>
+  <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="face logo" /></a>
     <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
     <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
   </nav>
