--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>NotCAH Menu</title>
     <link rel="shortcut icon" href="/assets/img/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="/assets/styles/style.css" />
+    <link rel="stylesheet" href="/assets/styles/general.css">
 </head>
 
 <body>
