--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,25 +3,59 @@
 <head>
   <meta charset="utf-8" />
   <title>NotCAH Login</title>
-  <link rel="shortcut icon" href="/assets/img/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles/general.css">
+  <link rel="shortcut icon" href="/assets/img/cah_icon.png" />
+  <link rel="stylesheet" href="/assets/styles/general.css">
+  <!--bulma styles-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="face logo" /></a>
-    <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
-    <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+  <nav class="navbar">
+    <div class="container">
+      <div id="navMenu" class="navbar-menu">
+        <div class="navbar-brand">
+          <a class='navbar-item' href='/'>
+            <img src="/assets/img/cah_icon.png" height="28">
+          </a>
+        </div>
+        <div class="navbar-start">
+
+          <a class="navbar-item" id='loginButton' href='/login'>
+            Login
+          </a>
+          <a class="navbar-item" id="signupButton" href="/signup">
+            Sign up
+          </a>
+        </div>
+
+        <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-dark">Documentation</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </nav>
 
-  <section id="content">
+  <section class="hero is-link is-fullheight-with-navbar has-background-light">
+    <div class="hero-body is-flex is-justify-content-center">
+      <div class='container is-flex is-flex-direction-column is-align-items-center columns m-0'>
+        <figure class="image column is-two-fifths block">
+          <img src='assets/img/cah_logo.png'>
+        </figure>
+        <section id="content" class='box block column is-one-third'>
 
+        </section>
+
+
+      </div>
+    </div>
   </section>
 
-  <div id="errorDiv" class='hidden'>
 
-    <h3><span id="errorMessage"></span></h3>
 
-  </div>
   <script src="/assets/loginBundle.js"></script>
 </body>
 
