--- a/views/main-menu.handlebars
+++ b/views/main-menu.handlebars
@@ -3,29 +3,54 @@
 <head>
     <meta charset="utf-8" />
     <title>NotCAH Menu</title>
-    <link rel="shortcut icon" href="/assets/img/favicon.png" />
-    <link rel="stylesheet" href="/assets/styles/general.css">
+    <link rel="shortcut icon" href="/assets/img/cah_icon.png" />
+    <link rel="stylesheet" href="/assets/styles/menu.css">
+    <!--bulma styles-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <nav>
-        <div class='navlink'><a href='/main-menu' id="playButton">Play</a></div>
-        <div class="navlink"><a href="/account" id="viewAccountButton">Account Settings</a></div>
-        <div class="navlink"><a href='/logout'>Logout</a></div>
+    <nav class="navbar has-background-black">
+        <div class="container ">
+            <div id="navMenu" class="navbar-menu">
+                <div class="navbar-start ">
+                    <a class='navbar-item' href='/main-menu'>
+                        <img src="/assets/img/cah_icon.png" height="28">
+                    </a>
+                    <a class="navbar-item has-text-light" href='/main-menu' id="playButton">
+                        Play
+                    </a>
+                    <a class="navbar-item has-text-light" href="/account" id="viewAccountButton">
+                        Account Settings
+                    </a>
+
+                </div>
+
+                <div class="navbar-end has-background-black">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <a class="navbar-item has-text-light" href='/logout'>
+                                Log out
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
-    <h1>Cards Against Humanity Online</h1>
-    <h2>Welcome, {{username}}</h2>
 
-    <section id="content">
-        {{!-- <div><a href="/join">Join Room</a></div>
-        <div><a href="/host">Host Room</a></div>
-        <div class="navlink"><a href="/store">Store</a></div> --}}
+    <section class="hero is-link is-fullheight-with-navbar has-background-black">
+        <h1 class=" block title has-text-centered">Welcome, {{username}}</h1>
+        <div class="hero-body is-flex is-justify-content-center is-flex-direction-column">
+            <div class="block" id="content">
+                <!--React components render here-->
+            </div>
+        </div>
     </section>
-    <div id="errorDiv" class='hidden'>
-
-        <h3><span id="errorMessage"></span></h3>
-
-    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/assets/appBundle.js"></script>
     <!--socket io import-->
